# picotron_fork

./: INSTALL_FLASH.md  pyproject.toml  setup_environment.sh  train.py
picotron/: model.py  process_group_manager.py  utils.py
