[project]
# Rqeuires uv version 0.9.7
name = "picotron-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hf-transfer>=0.1.9",
    "transformers>=4.57.1",
    "torch==2.3.1",
    "einops>=0.8.1",
    "datasets>=4.4.1",
    "wandb>=0.22.3",
    "setuptools>=80.9.0",
    "psutil>=7.1.3",
    #"flash-attn==2.5.9",
]

#[tool.uv.extra-build-dependencies]
#flash-attn = [{ requirement = "torch", match-runtime = true }]

#[tool.uv.extra-build-variables]
#flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
